--- a/Turistapp4/Turistapp4.Windows/View/ItemsPage1.xaml
+++ b/Turistapp4/Turistapp4.Windows/View/ItemsPage1.xaml
@@ -1,6 +1,6 @@
 ﻿<Page
     x:Name="pageRoot"
-    x:Class="Turistapp4.View.MainPage2"
+    x:Class="Turistapp4.View.ItemsPage1"
     DataContext="{Binding DefaultViewModel, RelativeSource={RelativeSource Self}}"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
