--- a/Turistapp4/Turistapp4.Windows/View/MainPage.xaml
+++ b/Turistapp4/Turistapp4.Windows/View/MainPage.xaml
@@ -10,8 +10,11 @@
     <Page.BottomAppBar>
         <AppBar Height="100">
             <Grid>
-                <AppBarButton x:Name="Afslut" HorizontalAlignment="Left" Icon="Cancel" Label="Afslut" VerticalAlignment="Center" Margin="40,0,0,0" Click="Afslut_Click"/>
-                <AppBarButton x:Name="Favoritter" Label="Favoritter" RenderTransformOrigin="0.5,0.5" Icon="Bookmarks" HorizontalAlignment="Right" VerticalAlignment="Center" Height="88" Width="100" Margin="0,0,40,0"/>
+                <AppBarButton x:Name="Afslut" HorizontalAlignment="Left" Label="Afslut" VerticalAlignment="Center" Margin="0,4,1166,4" Click="Afslut_Click">
+                	<AppBarButton.Icon>
+                		<SymbolIcon x:Name="afslutappbar" Symbol="Cancel"/>
+                	</AppBarButton.Icon>
+                </AppBarButton>
             </Grid>
         </AppBar>
     </Page.BottomAppBar>
@@ -21,20 +24,33 @@
             <Viewmodel:MainViewModel/>
         </Grid.DataContext>
         <Grid.RowDefinitions>
-            <RowDefinition Height="120"/>
-            <RowDefinition Height="137*"/>
-            <RowDefinition Height="25*"/>
+            <RowDefinition Height="110*"/>
+            <RowDefinition Height="517*"/>
+            <RowDefinition Height="141*"/>
         </Grid.RowDefinitions>
-        <Button x:Name="signinBtn" Content="Sign In" HorizontalAlignment="Left" Margin="898,33,0,39" VerticalAlignment="Stretch" Width="151" Background="Black" BorderBrush="#FF040101"/>
-        <SearchBox FocusOnKeyboardInput="True" HorizontalAlignment="Left" Margin="1116,36,0,0" VerticalAlignment="Top" Height="42" Width="227" FontSize="21.333" PlaceholderText="Søg" QuerySubmitted="SearchBox_QuerySubmitted" SuggestionsRequested="SearchBox_SuggestionsRequested"/>
-        <ListBox x:Name="SelectionBox" HorizontalAlignment="Left" Height="366" VerticalAlignment="Top" Width="366" Margin="124,52,0,0" Grid.Row="1" SelectionChanged="Selector_OnSelectionChanged" ItemsSource="{Binding Kategoriviser}" Background="#FFE4DADA" BorderBrush="White" SelectedItem="{Binding SelectedKategori, Mode=TwoWay}"/>
+        <Button x:Name="signinBtn" Content="Sign In" HorizontalAlignment="Left" Margin="1161,33,0,39" VerticalAlignment="Stretch" Width="151" Background="Black" BorderBrush="#FF040101"/>
+        <ListBox x:Name="SelectionBox" HorizontalAlignment="Left" Height="366" VerticalAlignment="Top" Width="366" Margin="124,62,0,0" Grid.Row="1" SelectionChanged="Selector_OnSelectionChanged" ItemsSource="{Binding Kategoriviser}" Background="#FFE4DADA" BorderBrush="White" SelectedItem="{Binding SelectedKategori, Mode=TwoWay}"/>
         <Button x:Name="Næsteknap" Content="Næste" HorizontalAlignment="Left" Margin="212,452,0,0" Grid.Row="1" VerticalAlignment="Top" Height="65" Width="160" FontSize="32" BorderBrush="Black" Click="Button_Click" Foreground="#FF0A0A0A"/>
-        <Image x:Name="SelectedImage" HorizontalAlignment="Left" Height="355" Margin="678,42,0,0" VerticalAlignment="Top" Width="496" Grid.Row="1"/>
+        <Image x:Name="SelectedImage" HorizontalAlignment="Left" Height="355" Margin="675,62,0,0" VerticalAlignment="Top" Width="496" Grid.Row="1" Source="{Binding SelectedKategori.Billede1}">
+            <Image.DataContext>
+                <Viewmodel:MainViewModel/>
+            </Image.DataContext>
+        </Image>
         <Image HorizontalAlignment="Left" Height="217" Margin="88,-45,0,0" VerticalAlignment="Top" Width="402" Source="/Assets/roskilde.png" Grid.RowSpan="2"/>
-        <Button x:Name="opretbruger" Content="Opret Bruger" HorizontalAlignment="Left" Margin="705,33,0,39" VerticalAlignment="Stretch" Click="opretbruger_Click" Width="151" Background="Black" BorderBrush="#FF040101">
+        <Button x:Name="opretbruger" Content="Opret Bruger" HorizontalAlignment="Left" Margin="960,33,0,39" VerticalAlignment="Stretch" Click="opretbruger_Click" Width="151" Background="Black" BorderBrush="#FF040101">
         </Button>
         <Path Data="M876.667,48.3333" Fill="#FF0A0A5D" HorizontalAlignment="Left" Height="0" Margin="876.667,48.333,0,0" Stretch="Fill" Stroke="Black" UseLayoutRounding="False" VerticalAlignment="Top" Width="0"/>
-        <Path Data="M876.667,29 L876.667,78" Fill="Black" HorizontalAlignment="Left" Height="63.333" Margin="876.667,29,0,0" Stretch="Fill" Stroke="Black" UseLayoutRounding="False" VerticalAlignment="Top" Width="1"/>
+        <Path Data="M1135.32,29 L1135.32,78" Fill="Black" HorizontalAlignment="Left" Height="63.333" Margin="1135.321,29,0,0" Stretch="Fill" Stroke="Black" UseLayoutRounding="False" VerticalAlignment="Top" Width="1"/>
+        <AppBar Opened="AppBar_Opened" Margin="-10,0,10,0">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <StackPanel Orientation="Horizontal"/>
+                <StackPanel Grid.Column="1" HorizontalAlignment="Right" Orientation="Horizontal"/>
+            </Grid>
+        </AppBar>
 
     </Grid>
 </Page>
