--- a/Turistapp4/Turistapp4.Windows/View/item2.xaml
+++ b/Turistapp4/Turistapp4.Windows/View/item2.xaml
@@ -1,13 +1,14 @@
 ﻿<Page
-    x:Name="pageRoot"
-    x:Class="Turistapp4.View.item2"
-    DataContext="{Binding DefaultViewModel, RelativeSource={RelativeSource Self}}"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Turistapp4.View"
     xmlns:common="using:Turistapp4.Common"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:ViewModel="using:Turistapp4.ViewModel"
+    x:Name="pageRoot"
+    x:Class="Turistapp4.View.item2"
+    DataContext="{Binding DefaultViewModel, RelativeSource={RelativeSource Mode=Self}}"
     mc:Ignorable="d">
 
     <Page.Resources>
@@ -21,11 +22,9 @@
         * Row 1 contains the rest of the page layout
     -->
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <Grid.ChildrenTransitions>
-            <TransitionCollection>
-                <EntranceThemeTransition/>
-            </TransitionCollection>
-        </Grid.ChildrenTransitions>
+        <Grid.DataContext>
+            <ViewModel:MainViewModel/>
+        </Grid.DataContext>
         <Grid.RowDefinitions>
             <RowDefinition Height="140"/>
             <RowDefinition Height="*"/>
@@ -38,13 +37,19 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <Button x:Name="backButton" Margin="39,59,39,0" Command="{Binding NavigationHelper.GoBackCommand, ElementName=pageRoot}"
-                        Style="{StaticResource NavigationBackButtonNormalStyle}"
-                        VerticalAlignment="Top"
-                        AutomationProperties.Name="Back"
-                        AutomationProperties.AutomationId="BackButton"
-                        AutomationProperties.ItemType="Navigation Button"/>
-            <TextBlock x:Name="pageTitle" Text="{StaticResource AppName}" Style="{StaticResource HeaderTextBlockStyle}" Grid.Column="1" 
-                        IsHitTestVisible="false" TextWrapping="NoWrap" VerticalAlignment="Bottom" Margin="0,0,30,40"/>
+				Style="{StaticResource NavigationBackButtonNormalStyle}"
+				VerticalAlignment="Top"
+				AutomationProperties.Name="Back"
+				AutomationProperties.AutomationId="BackButton"
+				AutomationProperties.ItemType="Navigation Button"/>
+            <TextBlock x:Name="pageTitle" Style="{StaticResource HeaderTextBlockStyle}" Grid.Column="1" 
+				IsHitTestVisible="false" TextWrapping="NoWrap" VerticalAlignment="Bottom" Margin="0,0,30,40" Text="{Binding SelectedKategori1.kategorinavn}"/>
         </Grid>
+        <TextBlock HorizontalAlignment="Left" Margin="130,135,0,0" Grid.Row="1" TextWrapping="Wrap" Text="{Binding SelectedKategori1.kategorinavn}" VerticalAlignment="Top" Height="363" Width="533">
+            <TextBlock.DataContext>
+                <ViewModel:MainViewModel/>
+            </TextBlock.DataContext>
+        </TextBlock>
+        <Image HorizontalAlignment="Left" Height="520" Margin="702,78,0,0" VerticalAlignment="Top" Width="520" Grid.Row="1"/>
     </Grid>
 </Page>
